# talk-2-tables

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  REACT_CHATBOT_IMPLEMENTATION.md  README.md  commit_message.txt  debug_aggregator.py  debug_server.py  debug_stdio_client.py  docker-compose.yml  nginx.conf  pyproject.toml  root-cause-analysis-report.md  start-all-services.sh  start-chatbot.sh  test_resource_cache.py  test_ui_startup.py
.claude/: settings.json  settings.local.json
config/: README.md  mcp-servers.example.json  mcp-servers.json  mcp-servers.minimal.json  mcp_servers.yaml  real-mcp-servers.json  test-multi-servers.json
data/: products.json
docs/: enhanced-intent-detection.md  llm-decision-flow.md  multi-mcp-setup.md  orchestrator-api.md
fastapi_server/: __init__.py  chat_handler.py  chat_handler_updated.py  config.py  enhanced_intent_detector.py  intent_classifier.py  intent_models.py  llm_manager.py  main.py  main_debug.py  main_updated.py  mcp_aggregator.py  mcp_client.py  mcp_client_base.py  mcp_config.yaml  mcp_orchestrator.py  mcp_platform.py  mcp_registry.py  mcp_resource_fetcher.py  mcp_servers_config.json  metadata_resolver.py  models.py  multi_server_intent_detector.py  openrouter_client.py  orchestrator_config.py  orchestrator_exceptions.py  product_mcp_client.py  prompt_templates.py  query_enhancer.py  query_models.py  query_orchestrator.py  resource_cache.py  resource_cache_manager.py  resource_router.py  retry_utils.py  semantic_cache.py  server_registry.py
react-chatbot/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
resources/: metadata.json  product_metadata.json  product_metadata_schema.json
scripts/: README_STARTUP.md  analyze_test_responses.py  check_database_data.py  check_server_status.py  debug_mcp_orchestrator.py  debug_multi_mcp_integration.py  debug_multi_mcp_resources.py  debug_resources.py  debug_simple_test.py  debug_validation.py  filesystem_mcp_server.py  final_implementation_summary.py  generate_product_metadata.py  inspect_resource_structure.py  mock_sse_server.py  monitor_resource_logs.sh  setup_multi_mcp_test_data.py  setup_product_metadata.py  setup_test_db.py  start_all_servers.py  start_product_server.py  start_servers.sh  stop_all_servers.sh  test_basic_langchain_flow.py  test_dynamic_resources.py  test_endpoint_fix.py  test_enhanced_basic.py  test_enhanced_integration.py  test_error_handling_fixes.py  test_fastapi_server.py  test_fastapi_sse.py  test_langchain_multi_mcp.py  test_llm_decision.py  test_mcp_direct.py  test_mcp_fix.py  test_multi_domain_queries.py  test_multi_llm.py  test_multi_mcp.py  test_multi_mcp_fix.py  test_multi_mcp_platform.py  (+14 more)
tests/: __init__.py  e2e_comprehensive_test.py  e2e_feature_test.py  e2e_infrastructure_validation_test.py  (+42 more)
(+147 files in other folders)
